# ai_agent_framework

./: .env.example  .gitignore  README.md  main.py  one_agent.py  pyproject.toml  requirements.txt  setup.cfg  testfile.txt
agents/: autonomous_agent.py  base_agent.py  supervisor_agent.py  workflow_agent.py
config/: default_config.yaml  logging_config.py  settings.py
core/: exceptions.py
core/communication/: __init__.py  agent_communicator.py  agent_protocol.py
core/llm/: base.py  claude.py  factory.py  openai.py
core/memory/: __init__.py  conversation.py  embeddings.py  knowledge_base.py  retrieval.py  text_utils.py
core/memory/vector_store/: __init__.py  base.py  chroma.py  faiss.py
core/state/: __init__.py  redis_manager.py
core/tools/: base.py  documentation.py  parser.py  registry.py
core/utils/: telemetry.py
core/workflow/: __init__.py  base.py  chain.py  evaluator.py  metrics_collector.py  orchestrator.py  parallel.py  router.py  task_queue.py  worker_pool.py
docs/: vector_store.md
examples/: autonomous_example.py  evaluator_optimizer_example.py  orchestration_example.py  rag_example.py  simple_agent.py
interfaces/: api.py  cli.py
tests/integration/: test_rag.py
tests/unit/: test_base_agent.py  test_orchestrator.py  test_vector_store.py  test_web_search.py
tools/: __init__.py
tools/apis/: __init__.py  connector.py  web_search.py  web_search_tool.py
tools/apis/web_search/: __init__.py  api_key_manager.py  base.py  caching.py  safety.py  utils.py  web_search.py
tools/apis/web_search/providers/: __init__.py  bing.py  google.py  serper.py
tools/data_analysis/: __init__.py  analyzer.py
tools/file_system/: __init__.py  list_dir.py  read.py  write.py
tools/memory/: __init__.py  retrieval_tool.py
