[metadata]
name = ai_agent_framework
version = 0.1.0
description = A flexible framework for building AI agents using simple, composable patterns
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/ai_agent_framework
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
install_requires =
    anthropic>=0.21.0
    aiohttp>=3.8.0
    pyyaml>=6.0
    fastapi>=0.103.0
    uvicorn>=0.23.0
    python-dotenv>=1.0.0

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-asyncio>=0.21.0
    black>=23.0.0
    isort>=5.12.0
    mypy>=1.4.0
    flake8>=6.0.0
web =
    fastapi>=0.103.0
    uvicorn>=0.23.0
data =
    pandas>=2.0.0
    numpy>=1.24.0
    matplotlib>=3.7.0

[options.entry_points]
console_scripts =
    ai-agent = ai_agent_framework.main:cli_entry_point

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,__pycache__,build,dist