# ai_agent_framework/setup.cfg

[metadata]
name = ai_agent_framework
version = 0.1.0
description = A flexible framework for building AI agents using simple, composable patterns
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/ai_agent_framework # Replace with actual URL if available
author = Your Name # Replace with actual author
author_email = your.email@example.com # Replace with actual email
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11 # Added from source content

[options]
packages = find:
python_requires = >=3.8
install_requires =
    # Note: Dependencies seem slightly different between requirements.txt and setup.cfg
    # Listing the ones from setup.cfg here, consider consolidating with requirements.txt
    anthropic>=0.21.0
    aiohttp>=3.8.0 # Note: requirements.txt has >=3.9.0
    pyyaml>=6.0
    fastapi>=0.103.0
    uvicorn>=0.23.0
    python-dotenv>=1.0.0
    # Add other core dependencies if missing, based on requirements.txt

[options.extras_require]
dev =
    pytest>=7.0.0 # Note: requirements.txt has >=7.4.0
    pytest-asyncio>=0.21.0 # Note: requirements.txt has >=0.23.0
    black>=23.0.0 # Note: requirements.txt has >=23.12.0
    isort>=5.12.0 # Note: requirements.txt has >=5.13.0
    mypy>=1.4.0 # Note: requirements.txt has >=1.7.0
    flake8>=6.0.0 # Note: requirements.txt has >=6.1.0
web =
    fastapi>=0.103.0
    uvicorn>=0.23.0
data =
    pandas>=2.0.0 # Note: requirements.txt has >=2.1.3
    numpy>=1.24.0 # Note: requirements.txt has >=1.26.0
    matplotlib>=3.7.0 # Note: requirements.txt has >=3.8.0
vector =
    chromadb>=0.4.18
    faiss-cpu>=1.7.4 # Use faiss-gpu for GPU support
    sentence-transformers>=2.2.2
    tenacity>=8.2.3
    filelock>=3.12.2
all =
    # Combine all optional dependencies
    fastapi>=0.103.0
    uvicorn>=0.23.0
    pandas>=2.0.0
    numpy>=1.24.0
    matplotlib>=3.7.0
    chromadb>=0.4.18
    faiss-cpu>=1.7.4
    sentence-transformers>=2.2.2
    tenacity>=8.2.3
    filelock>=3.12.2

[options.entry_points]
console_scripts =
    # Corrected entry point: points to the function in interfaces/cli.py
    ai-agent = ai_agent_framework.interfaces.cli:cli_entry_point

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,__pycache__,build,dist