# ai_agent_framework/setup.cfg

[metadata]
name = ai_agent_framework
version = 0.1.0 # Consider updating version if making significant changes
description = A flexible framework for building AI agents using simple, composable patterns
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/yourusername/ai_agent_framework # <-- Update with your actual URL
# author = Your Name # <-- Update with your actual author name
# author_email = your.email@example.com # <-- Update with your actual email
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12 # Add newer Python versions if supported

[options]
packages = find:
python_requires = >=3.8
# --- Updated Core Dependencies (Reflecting requirements.txt) ---
install_requires =
    pyyaml>=6.0.1
    python-dotenv>=1.0.0
    aiohttp>=3.9.0
    tenacity>=8.2.3
    typing-extensions>=4.8.0
    # LLM Libraries (Core to the framework)
    anthropic>=0.21.0
    openai>=1.0.0       # <-- Added OpenAI
    tiktoken>=0.4.0     # <-- Added Tiktoken
    # Add other *essential* core dependencies here if any were missed
    # Keep this list minimal; move optional features to extras_require

[options.extras_require]
# Development dependencies
dev =
    pytest>=7.4.0
    pytest-asyncio>=0.23.0
    black>=23.12.0
    isort>=5.13.0
    mypy>=1.7.0
    flake8>=6.1.0

# Web interface dependencies
web =
    fastapi>=0.103.2
    uvicorn>=0.24.0 # Consistent with requirements.txt
    pydantic>=2.5.0 # Consistent with requirements.txt

# Data analysis dependencies
data =
    pandas>=2.1.3
    numpy>=1.26.0
    matplotlib>=3.8.0

# Vector store dependencies
vector =
    chromadb>=0.4.18
    # faiss-cpu>=1.7.4   # Optional: uncomment if FAISS is a direct optional dependency
    sentence-transformers>=2.2.2 # Used by LocalEmbedder, CrossEncoder
    filelock>=3.12.2         # Often needed by embedding/vector libs

# LLM-specific dependencies (can be used to install only needed LLMs)
# Note: Core LLM libs are now in install_requires, keep this extra for potential future additions
llms =
    openai>=1.0.0
    tiktoken>=0.4.0
    anthropic>=0.21.0

# All optional features combined
all =
    %(dev)s
    %(web)s
    %(data)s
    %(vector)s
    %(llms)s
    # Add other extras here if they are created

[options.entry_points]
console_scripts =
    # Corrected entry point based on review: points to the function in interfaces/cli.py
    ai-agent = ai_agent_framework.interfaces.cli:cli_entry_point

[flake8]
max-line-length = 88
extend-ignore = E203
# Ensure tests directory isn't excluded if it exists at root
exclude = .git,__pycache__,build,dist,.venv,venv,agent # Exclude common virtual env names

# Add other sections like [isort], [black], [mypy] if needed for tool configuration